--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
         </div>
 
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="image/atul1.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>DReam big</h1>
+            <h3>Become Danshil</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora facere placeat nostrum accusamus nulla
+                repudiandae suscipit aperiam, eum distinctio fugiat exercitationem minima voluptas est nobis quam
+                cumque, numquam deserunt unde?</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
