--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Wellcome To</h1>
             <h1><span class="orange">Sanwar Tanvir</span> Wrold</h1>
@@ -31,7 +31,7 @@
         </div>
 
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="image/atul1.jpg" alt="">
         </div>
@@ -45,6 +45,33 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-satck" class="experience-item">
+                <h1>Full Stack Student</h1>
+                <h3 class="orange">1990 Present/Pro Level Student</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ducimus veniam nihil eaque
+                    voluptate
+                    unde ad, laudantium officiis iusto dolorem? Officiis ipsum aliquam sint quia eveniet magni fugiat
+                    non
+                    inventore.</p>
+            </div>
+            <div class="experience-item">
+                <h1>Baby Teacher</h1>
+                <h3 class="orange">2018 Present/Baby Teacher</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam exercitationem deserunt culpa
+                    dolore
+                    repudiandae odit molestiae aperiam tempore, facilis nulla corrupti atque accusamus voluptate
+                    molestias
+                    voluptatum temporibus nihil libero ducimus?</p>
+            </div>
+        </div>
+
+    </section>
 </body>
+<footer>
+    etc
+</footer>
 
 </html>
