--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Wellcome To</h1>
-            <h1><span class="orange">Sanwar Tanvir</span> Wrold</h1>
+            <h1><span class="orange">Sanwar Tanvir</span> World</h1>
             <h3>Student Of Dhaka University</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias mollitia vel optio repellendus natus
                 inventore,
